[workspace]
members = [
  "helix-core",
  "helix-view",
  "helix-term",
  "helix-tui",
  "helix-lsp",
  "helix-dap",
  "helix-loader",
  "helix-vcs",
  "xtask",
]

default-members = [
  "helix-term"
]

[profile.release]
lto = "thin"
# debug = true

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
# strip = "debuginfo" # TODO: or strip = true
opt-level = 3

[profile.integration]
inherits = "test"
package.helix-core.opt-level = 2
package.helix-tui.opt-level = 2
package.helix-term.opt-level = 2

[patch.crates-io]
crossterm = { git = "https://github.com/crossterm-rs/crossterm", rev = "bca71adad70c36de3a4e13d7edc31c0ef9567f47" }
